--- a/weather-app/src/style.css
+++ b/weather-app/src/style.css
@@ -1,5 +1,14 @@
 @import "tailwindcss";
 
+#background-video {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
 #city-input:focus {
     outline: none;
 }
